# lightning

./: INSTALL.md  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg
configs/: lenet_origin_mnist.yml  local_vit_equalNrOfPArameters_one_cykle.yml  local_vit_fewerNrOfPArameters_one_cykle.yml  local_vit_reduced_parameters_one_cykle.yml  segmentation_bygning_resnet.yml  segmentation_resnet.yml  vanilla_vit_one_cykle.yml
src/lightning/: data_preprocessing.py  datasets_module.py  infer.py  lightning_module.py  local_MLP.py  local_vision_transformer.py  models.py  saving_geotif.py  test.py  train.py  visualize.py
src/lightning_ml/: data_preprocessing.py  datasets_module.py  infer.py  lightning_module.py  local_vision_transformer.py  locally_connected.py  train.py  visualize.py
