

[metadata]
name = lightning_ml
version = 0.1.1
author = Rasmus Johansson
author_email = rasmuspjohansson@gmail.com
url = "https://github.com/rasmuspjohansson/lightning"
description =  ml with lightning
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = any
keywords = semantic segmentation, pytorch ,ML, deep learning  
classifiers =
    Topic :: semantic segmentation, pytorch ,ML, deep learning
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Programming Language :: Python
homepage = "https://github.com/rasmuspjohansson/lightning"
repository = "https://github.com/rasmuspjohansson/lightning"
documentation = "https://github.com/rasmuspjohansson/lightning"

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
packages = find:

setup_requires =
    setuptools

install_requires =
    datasets
    lightning



[options.package_data]
* =  "*.yaml", "*.txt"


[check-manifest]
ignore =
    .ipynb
    .sh


#basically the pytorch flake8 setting from https://github.com/pytorch/pytorch/blob/master/.flake8
[flake8]
select = B,C,E,F,P,T4,W,B9
max-line-length = 140
# C408 ignored because we like the dict keyword argument syntax
# E501 is not flexible enough, we're using B950 instead
ignore =
    E203,E305,E402,E501,E721,E741,F405,F821,F841,F999,W503,W504,C408,E302,W291,E303,
per-file-ignores = __init__.py: F401 torch/utils/cpp_extension.py: B950
optional-ascii-coding = True
exclude =
    .git,
    __pycache__,
    scripts,
    tables,
    outputs,
    *.pyi
