

[metadata]
name = lightning_ml
version = 0.1.1
author = Rasmus Johansson
author_email = rasmuspjohansson@gmail.com
url = "https://github.com/rasmuspjohansson/lightning"
description =  ml with lightning
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md
platform = any
keywords = semantic segmentation, pytorch ,ML, deep learning  
classifiers =
    Topic :: semantic segmentation, pytorch ,ML, deep learning
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Programming Language :: Python
homepage = "https://github.com/rasmuspjohansson/lightning"
repository = "https://github.com/rasmuspjohansson/lightning"
documentation = "https://github.com/rasmuspjohansson/lightning"

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
package_dir=
	=src
packages=find:
[options.packages.find]
where=src


setup_requires =
    setuptools
  


install_requires =
    datasets
    lightning
    segmentation_models_pytorch
    torchvision




[check-manifest]
ignore =
    .ipynb
    .sh


